# web-socket-python

./: .gitignore  README.md  app.py  pyproject.toml
db_models/: payment.py
instance/: database.db
payments/: pix.py
templates/: 404.html  confirmed_payment.html  payment.html
tests/: test_pix.py
