[project]
name = "websocketpython"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask==2.3.0",
    "flask-socketio==5.3.6",
    "flask-sqlalchemy==3.1.1",
    "pillow==12.2.0",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "qrcode==7.4.2",
]
